--- a/.gitignore
+++ b/.gitignore
@@ -28,7 +28,11 @@ yarn-error.log*
 # local env files
 .env*.local
 
+# Ignorar arquivos de configuração de ambiente
 .env
+.env.local
+.env.development
+.env.production
 
 # vercel
 .vercel
